# researchJournaler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mainwindow.h
src/: mainwindow.cpp
