cmake_minimum_required(VERSION 3.21)
project(resJourn)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 COMPONENTS
    Core
    Gui
    Widgets
    REQUIRED
)

add_executable(resJourn
    src/main.cpp
    src/mainwindow.cpp
    include/mainwindow.h
)

target_include_directories(resJourn
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(resJourn
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
)
